# candle-is-net

./: Cargo.toml  README.md
src/: anime_segmentation.rs  isnet_dis.rs  main.rs  model.rs
