[package]
name = "candle-is-net"
version = "0.1.0"
edition = "2021"

[features]
gpu = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
